@@ -25,6 +25,7 @@ import uk.gov.hmcts.reform.civil.enums.ClaimTypeUnspec;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.Address;
 import uk.gov.hmcts.reform.civil.model.CaseData;
+import uk.gov.hmcts.reform.civil.model.Party;
 import uk.gov.hmcts.reform.civil.model.SolicitorOrganisationDetails;
 import uk.gov.hmcts.reform.civil.model.robotics.CaseHeader;
 import uk.gov.hmcts.reform.civil.model.robotics.NoticeOfChange;
@@ -34,7 +35,6 @@ import uk.gov.hmcts.reform.civil.prd.model.ContactInformation;
 import uk.gov.hmcts.reform.civil.prd.model.DxAddress;
 import uk.gov.hmcts.reform.civil.prd.model.Organisation;
 import uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder;
-import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import uk.gov.hmcts.reform.civil.service.Time;
@@ -42,9 +42,15 @@ import uk.gov.hmcts.reform.civil.service.UserService;
 import uk.gov.hmcts.reform.civil.service.flowstate.SimpleStateFlowEngine;
 import uk.gov.hmcts.reform.civil.service.flowstate.TransitionsTestConfiguration;
 import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsEventTextFormatter;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsRespondentResponseSupport;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsTimelineHelper;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsPartyLookup;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsCaseDataSupport;
 import uk.gov.hmcts.reform.civil.stateflow.simplegrammar.SimpleStateFlowBuilder;
 import uk.gov.hmcts.reform.civil.utils.LocationRefDataUtil;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 
@@ -69,7 +75,12 @@ import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
     RoboticsDataMapperForUnspec.class,
     RoboticsAddressMapper.class,
     AddressLinesMapper.class,
-    OrganisationService.class
+    OrganisationService.class,
+    RoboticsRespondentResponseSupport.class,
+    RoboticsEventTextFormatter.class,
+    RoboticsTimelineHelper.class,
+    RoboticsPartyLookup.class,
+    RoboticsCaseDataSupport.class
 })
 @ExtendWith(SpringExtension.class)
 class RoboticsDataMapperForUnspecTest {
@@ -132,7 +143,7 @@ class RoboticsDataMapperForUnspecTest {
     void shouldMapToRoboticsCaseData_whenDefendantIsNotRegistered() {
         CaseData caseData = CaseDataBuilder.builder()
             .atStatePaymentSuccessful()
-            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails("My Organisation", "me@server.net", "0123456789", "9999999999", "Dx"))
+            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails())
             .build();
 
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
@@ -147,7 +158,7 @@ class RoboticsDataMapperForUnspecTest {
     void shouldMapToRoboticsCaseData_whenDefendantIsNotRegistered_DtsCci_1478() {
         CaseData caseData = CaseDataBuilder.builder()
             .atStatePaymentSuccessful()
-            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails("My Organisation", "me@server.net", "0123456789", "9999999999", "Dx"))
+            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails())
             .build();
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.CLINICAL_NEGLIGENCE);
         caseData.setClaimType(ClaimType.PERSONAL_INJURY);
@@ -164,7 +175,7 @@ class RoboticsDataMapperForUnspecTest {
 
         assertThat(roboticsCaseData.getSolicitors()).hasSize(2);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -191,7 +202,7 @@ class RoboticsDataMapperForUnspecTest {
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
         assertThat(roboticsCaseData.getSolicitors()).hasSize(2);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -229,7 +240,7 @@ class RoboticsDataMapperForUnspecTest {
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
         assertThat(roboticsCaseData.getSolicitors()).hasSize(2);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -258,7 +269,7 @@ class RoboticsDataMapperForUnspecTest {
         RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
 
         assertThat(roboticsCaseData.getSolicitors()).hasSize(1);
-        var applicantSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var applicantSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(applicantSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(applicantSolicitor.getName()).isEqualTo("Org Name");
         assertThat(applicantSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -278,7 +289,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndClaimantIsPresent() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setApplicant2(PartyBuilder.builder().individual().build());
+        caseData.setApplicant2(createIndividualParty());
         caseData.setAddApplicant2(YES);
         RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
         assertThat(roboticsCaseData.getLitigiousParties()).hasSize(3);
@@ -287,7 +298,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsPresent() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
         caseData.setClaimType(ClaimType.PERSONAL_INJURY);
@@ -299,7 +310,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresented() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
@@ -312,7 +323,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresentedSameSolicitor() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2SameLegalRepresentative(YES);
@@ -326,7 +337,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldCheck_whenFeignException() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2SameLegalRepresentative(YES);
@@ -342,7 +353,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresentedDifferentSolicitor() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2SameLegalRepresentative(NO);
@@ -352,7 +363,7 @@ class RoboticsDataMapperForUnspecTest {
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
         assertThat(roboticsCaseData.getSolicitors()).hasSize(3);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -380,7 +391,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresentedNotRegistered() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2OrgRegistered(NO);
@@ -395,7 +406,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsNotRepresented() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(NO);
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
@@ -553,18 +564,51 @@ class RoboticsDataMapperForUnspecTest {
         assertThat(roboticsCaseData.getHeader().getCaseAllocatedTo()).isEqualTo(expectedTrack);
     }
 
-    private PreviousOrganisationCollectionItem buildPreviousOrganisation(String name, LocalDateTime toDate) {
-        return PreviousOrganisationCollectionItem.builder().value(
-            PreviousOrganisation.builder().organisationName(name).toTimestamp(toDate).build()).build();
+    private Party createIndividualParty() {
+        Party party = new Party();
+        party.setType(Party.Type.INDIVIDUAL);
+        party.setIndividualTitle("Mr.");
+        party.setIndividualFirstName("John");
+        party.setIndividualLastName("Rambo");
+        party.setIndividualDateOfBirth(LocalDate.now().minusYears(30));
+        party.setPartyName("Mr. John Rambo");
+        Address address = new Address();
+        address.setAddressLine1("1 Example Street");
+        address.setPostCode("AB1 1AB");
+        party.setPrimaryAddress(address);
+        party.setPartyPhone("01234 567890");
+        party.setPartyEmail("john.rambo@example.com");
+        return party;
     }
 
-    private SolicitorOrganisationDetails createSolicitorOrganisationDetails(String orgName, String email, String phone, String fax, String dx) {
+    private Party createCompanyParty() {
+        Party party = new Party();
+        party.setType(Party.Type.COMPANY);
+        party.setCompanyName("Company ltd");
+        party.setPartyName("Company ltd");
+        Address address = new Address();
+        address.setAddressLine1("1 Example Street");
+        address.setPostCode("AB1 1AB");
+        party.setPrimaryAddress(address);
+        party.setPartyPhone("01234 567890");
+        party.setPartyEmail("company@example.com");
+        return party;
+    }
+
+    private PreviousOrganisationCollectionItem buildPreviousOrganisation(String name, LocalDateTime toDate) {
+        PreviousOrganisation previousOrganisation = new PreviousOrganisation();
+        previousOrganisation.setOrganisationName(name);
+        previousOrganisation.setToTimestamp(toDate);
+        return new PreviousOrganisationCollectionItem(null, previousOrganisation);
+    }
+
+    private SolicitorOrganisationDetails createSolicitorOrganisationDetails() {
         SolicitorOrganisationDetails details = new SolicitorOrganisationDetails();
-        details.setOrganisationName(orgName);
-        details.setEmail(email);
-        details.setPhoneNumber(phone);
-        details.setFax(fax);
-        details.setDx(dx);
+        details.setOrganisationName("My Organisation");
+        details.setEmail("me@server.net");
+        details.setPhoneNumber("0123456789");
+        details.setFax("9999999999");
+        details.setDx("Dx");
         details.setAddress(new Address());
         return details;
     }
